# de_anza_scrape

./: .gitignore  README.md  analysis.jl  grab.py  postprocess_courses.py  pyproject.toml  sample.html
