[project]
name = "de-anza-scrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "pandas>=2.3.0",
    "selenium>=4.33.0",
]

[project.scripts]
grab = "grab:main"
